[gd_scene load_steps=5 format=3 uid="uid://b4fp180mv1chx"]

[ext_resource type="Script" path="res://scenes/game/Playground/Playground.gd" id="1_4ts3o"]
[ext_resource type="PackedScene" uid="uid://cxgwmebaaj6lt" path="res://scenes/game/TouchCamera/TouchCamera.tscn" id="2_ylx20"]
[ext_resource type="Theme" uid="uid://yqpu1k43isuw" path="res://themes/kenney_rpg.tres" id="3_fgile"]
[ext_resource type="PackedScene" uid="uid://dpidhjdgt3xrj" path="res://scenes/game/NavButtons/NavButtons.tscn" id="4_70ndd"]

[node name="Playground" type="Node2D"]
script = ExtResource("1_4ts3o")

[node name="TouchCamera" parent="." instance=ExtResource("2_ylx20")]
zoom = Vector2(2, 2)
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_top_margin = 0.4
drag_right_margin = 0.4
drag_bottom_margin = 0.4
editor_draw_drag_margin = true

[node name="UiLayer" type="CanvasLayer" parent="."]

[node name="Container" type="MarginContainer" parent="UiLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_fgile")
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UiLayer/Container"]
layout_mode = 2
offset_left = 25.0
offset_top = 25.0
offset_right = 1127.0
offset_bottom = 623.0

[node name="HBoxContainer" type="HBoxContainer" parent="UiLayer/Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
offset_right = 1102.0
offset_bottom = 200.0

[node name="HBoxContainer2" type="HBoxContainer" parent="UiLayer/Container/VBoxContainer"]
layout_mode = 2
offset_top = 204.0
offset_right = 1102.0
offset_bottom = 598.0
size_flags_vertical = 3
alignment = 2

[node name="NavButtons" parent="UiLayer/Container/VBoxContainer/HBoxContainer2" instance=ExtResource("4_70ndd")]
layout_mode = 2
